header text updated

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "your monospace minimalist website"
+title: "George Vengrovski"
 description: "phd student | deep learning | internship hunt"
 theme: minima
 plugins:
