--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "George Vengrovski"
-description: "phd student | deep learning | internship hunt"
+description: ""
 theme: minima
 plugins:
   - jekyll-feed
